--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "pre-rendering",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.8",
-    "next": "13.4.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "axios": "^1.4.0"
-  }
+   "name": "pre-rendering",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint",
+      "server": "json-server --watch db.json --port 4000"
+   },
+   "dependencies": {
+      "eslint": "8.44.0",
+      "eslint-config-next": "13.4.8",
+      "next": "13.4.8",
+      "react": "18.2.0",
+      "react-dom": "18.2.0"
+   },
+   "devDependencies": {
+      "axios": "^1.4.0",
+      "json-server": "^0.17.3"
+   }
 }
