--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "eslint-config-next": "13.4.8",
       "next": "13.4.8",
       "react": "18.2.0",
-      "react-dom": "18.2.0"
+      "react-dom": "18.2.0",
+      "swr": "^2.2.0"
    },
    "devDependencies": {
       "axios": "^1.4.0",
